plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.openapi.generator' version '7.10.0'
}

group = 'com.transit'
version = '0.0.1-SNAPSHOT'
description = 'Transit Planner Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.26'
	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.wiremock:wiremock-standalone:3.10.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

openApiGenerate {
	generatorName = 'spring'
	inputSpec = "${rootProject.projectDir}/../api-spec/openapi.yaml"
	outputDir = "${buildDir}/generated"
	apiPackage = 'com.transit.api'
	modelPackage = 'com.transit.model'
	configOptions = [
		delegatePattern: 'true',
		interfaceOnly: 'true',
		useSpringBoot3: 'true',
		useTags: 'true',
		dateLibrary: 'java8'
	]
}

sourceSets {
	main {
		java {
			srcDir "${buildDir}/generated/src/main/java"
		}
	}
}

compileJava.dependsOn tasks.openApiGenerate
